leaderboard fixed, done for today

--- a/main.css
+++ b/main.css
@@ -91,6 +91,7 @@
   .leaderboard > div {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
     gap: 10px;
   }
