fixed fixed error

--- a/main.css
+++ b/main.css
@@ -186,6 +186,7 @@
     justify-content: space-evenly;
     align-items: center;
     gap: 10px;
+  }
     
   /*Random code for multiple pages*/
   .sameLine {
