--- a/Base Website/main.css
+++ b/Base Website/main.css
@@ -1,4 +1,11 @@
 /*Home.html CSS*/
+
+body {
+    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0; 
+}
   .class-leaderboard{
     display: flex;
     justify-content: center;
